--- a/css/apps.css
+++ b/css/apps.css
@@ -3,7 +3,7 @@ body {
   --BorderColor: var(--UnselectedBorderColor);
   --grid_width: var(--ColumnWidth); /*calc(1.1 * var(--ColumnWidth)); Not suported on Edge*/
   --grid_item_margin: calc(0.02 * var(--grid_width));
-  --grid_item_border_width: calc(0.01 * var(--grid_width));
+  --grid_item_border_width: calc(0.009 * var(--grid_width));
   --grid_item_width: calc(0.5 * (var(--grid_width) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
   overflow-x: hidden;
 }
@@ -45,6 +45,7 @@ h1, p {
   /* width: auto; */
   height: auto;
   border: var(--grid_item_border_width) solid var(--BorderColor);
+  border-radius: 0px;
   margin: var(--grid_item_margin);
 }
 .grid_item:hover{
@@ -95,7 +96,7 @@ h1, p {
   body {
     --sclfactor: 2.4;
     --grid_item_margin: calc(var(--sclfactor) * 0.02 * var(--grid_width));
-    --grid_item_border_width: calc(var(--sclfactor) * 0.01 * var(--grid_width));
+    --grid_item_border_width: calc(var(--sclfactor) * 0.008 * var(--grid_width));
     --grid_item_width: calc(var(--sclfactor) * 0.5 * (var(--grid_width) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
   }
   .grid_container {
