--- a/css/blog_page_template.css
+++ b/css/blog_page_template.css
@@ -1,6 +1,6 @@
 #blog {
   color: var(--NavBarActiveColor);
-  pointer-events: none;
+  pointer-events: all;
 }
 
 .blog-wrap {
@@ -16,4 +16,37 @@
 .blog-title {
   text-align: center;
   font-size: calc(1.2 * var(--TextFontSize));
+}
+
+#content-wrap {
+  padding-bottom: 35vh;
+}
+
+#blog-navigator {
+  position: absolute;
+  bottom: 20vh;
+  text-align: center;
+  width: 100%;
+  height: 10vh;
+}
+
+.blog-navigator-button {
+  color: var(--UnselectedBorderColor);
+  font-size: 5em;
+  display: inline-block;
+  font-family: monospace;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  text-align: center;
+  cursor: pointer;
+}
+
+.blog-navigator-button:hover {
+  color: var(--FancyColor);
+}
+
+@media only screen and (max-width: 768px) {
+  .blog-navigator-button {
+    font-size: 3.5em;
+  }
 }
