--- a/css/master.css
+++ b/css/master.css
@@ -89,13 +89,13 @@ a {
 }
 #content-wrap {
   padding-top: 5vh;
-  padding-bottom: 10vh;    /* Footer height */
+  padding-bottom: 15vh;  
 }
 #footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 10vh;            /* Footer height */
+  height: 10vh;
 }
 #footer-content {
   text-align: center;
