--- a/css/master.css
+++ b/css/master.css
@@ -3,16 +3,19 @@
   --DarkModeBackgroundColor: rgb(25, 25, 25);
   --DarkModeFontColor: rgb(189, 189, 189);
   --DarkModeFancyColor: rgb(73, 201, 35);
+  --DarkModeEmphFontColor: rgb(255, 255, 255);
 
   /* Light mode color palette */
   --LightModeBackgroundColor: rgb(189, 189, 189);
-  --LightModeFontColor: rgb(0, 0, 0);
+  --LightModeFontColor: rgb(41, 41, 41);
   --LightModeFancyColor: rgb(13, 79, 185);
+  --LightModeEmphFontColor: rgb(74, 74, 74);
 
   /* Master variables */
   --BackgroundColor: var(--DarkModeBackgroundColor);
   --FontColor: var(--DarkModeFontColor);
   --FancyColor: var(--DarkModeFancyColor);
+  --EmphFontColor: var(--DarkModeEmphFontColor);
   --NavBarActiveColor: var(--FancyColor);
   --NavBarSeparatorColor: rgb(51, 51, 51);
   --TextHoverColor: rgb(93, 93, 93);
@@ -89,7 +92,7 @@ a {
 }
 #content-wrap {
   padding-top: 5vh;
-  padding-bottom: 15vh;  
+  padding-bottom: 15vh;
 }
 #footer {
   position: absolute;
