--- a/css/research.css
+++ b/css/research.css
@@ -1,12 +1,72 @@
-html {
-  color: var(--FontColor);
+body {
+  --BorderColor: var(--UnselectedBorderColor);
+  --grid_width: 70vw;
+  --grid_item_margin: calc(0.03 * var(--grid_width));
+  --grid_item_border_width: calc(0.003 * var(--grid_width));
+  --grid_item_width: calc(0.5 * (var(--grid_width) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
+  overflow-x: hidden;
 }
-#research {
-  color: var(--NavBarActiveColor);
-  pointer-events: none;
+h1, p {
+  color: var(--FontColor);
 }
 h1 {
   text-align: center;
   font-size: 3vw;
   margin-top: 40vh;
+}
+
+.grid_container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 350px));
+  grid-auto-flow: row dense;
+  width: var(--grid_width);
+  margin-right: 0;
+  margin-left: calc((100vw - var(--grid_width)) / 2);
+  margin-bottom: 5vh;
+  margin-top: 15vh;
+  /* margin: auto; */
+}
+.grid_item {
+  width: auto;
+  height: auto;
+  /* border: var(--grid_item_border_width) solid var(--BorderColor); */
+  /* border-radius: 25px; */
+  padding: calc(0.2 * var(--grid_item_margin));
+  margin: var(--grid_item_margin);
+  cursor: pointer;
+}
+.grid_item_content:hover > * {
+  /* border: var(--grid_item_border_width) solid var(--FancyColor); */
+  color: var(--EmphFontColor);
+}
+.grid_item_content {
+  margin: 0;
+}
+.grid_item_title {
+  width: 100%;
+  text-align: center;
+  font-size: 1.4em;
+  /* max-height: calc(0.15 * var(--grid_item_width)); */
+  margin: 0;
+}
+.thumbnail {
+  width: 100%;
+  margin-top: 1em;
+  /* width: calc(0.8 * var(--grid_item_width));
+  margin-left: calc(0.1 * var(--grid_item_width)); */
+  /* width: auto; */
+  /* max-height: 100%; */
+  /* padding: 1vw; */
+  /* display: block; */
+}
+.grid_link {
+  text-decoration: none;
+  color: var(--FontColor);
+}
+.content_preview {
+  text-align: justify;
+}
+#research {
+  color: var(--NavBarActiveColor);
+  pointer-events: none;
 }
