--- a/css/apps.css
+++ b/css/apps.css
@@ -1,10 +1,9 @@
 body {
   --FancyColor_selected: rgb(15, 15, 15);
   --BorderColor: var(--UnselectedBorderColor);
-  --grid_width: var(--ColumnWidth); /*calc(1.1 * var(--ColumnWidth)); Not suported on Edge*/
-  --grid_item_margin: calc(0.02 * var(--grid_width));
-  --grid_item_border_width: calc(0.009 * var(--grid_width));
-  --grid_item_width: calc(0.5 * (var(--grid_width) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
+  --grid_item_margin: calc(0.02 * var(--ColumnWidth));
+  --grid_item_border_width: calc(0.007 * var(--ColumnWidth));
+  --grid_item_width: calc(0.5 * (var(--ColumnWidth) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
   overflow-x: hidden;
 }
 #webapps {
@@ -23,10 +22,10 @@ h1, p {
   color: var(--FontColor);
 }
 .intro {
-  width: var(--grid_width);
+  width: var(--ColumnWidth);
   margin-top: var(--TopMarginToHeader);
   margin-bottom: 5vh;
-  margin-left: calc( (100vw - var(--grid_width)) / 2);
+  margin-left: calc( (100vw - var(--ColumnWidth)) / 2);
   background-color: var(--BackgroundColor);
   color: var(--FontColor);
   font-size: var(--TextFontSize);
@@ -35,22 +34,22 @@ h1, p {
 .grid_container {
   display: grid;
   grid-template-columns: auto auto;
-  width: var(--grid_width);
+  width: var(--ColumnWidth);
   margin-right: 0;
-  margin-left: calc((100vw - var(--grid_width)) / 2.1);
+  margin-left: calc((100vw - var(--ColumnWidth)) / 2.1);
   margin-bottom: 5vh;
 }
 .grid_item {
   width: var(--grid_item_width);
-  /* width: auto; */
   height: auto;
   border: var(--grid_item_border_width) solid var(--BorderColor);
   border-radius: 0px;
   margin: var(--grid_item_margin);
+  cursor: pointer;
 }
 .grid_item:hover{
   border: var(--grid_item_border_width) solid var(--FancyColor);
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 .grid_item:hover > .button {
   border-color: var(--FancyColor);
@@ -63,10 +62,6 @@ h1, p {
 .thumbnail {
   width: calc(0.8 * var(--grid_item_width));
   margin-left: calc(0.1 * var(--grid_item_width));
-  /* width: auto; */
-  /* max-height: 100%; */
-  /* padding: 1vw; */
-  /* display: block; */
 }
 .button {
   font-size: calc(0.065 * var(--grid_item_width));
@@ -95,9 +90,9 @@ h1, p {
 @media only screen and (max-width: 768px) and (orientation: portrait) {
   body {
     --sclfactor: 2.4;
-    --grid_item_margin: calc(var(--sclfactor) * 0.02 * var(--grid_width));
-    --grid_item_border_width: calc(var(--sclfactor) * 0.008 * var(--grid_width));
-    --grid_item_width: calc(var(--sclfactor) * 0.5 * (var(--grid_width) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
+    --grid_item_margin: calc(var(--sclfactor) * 0.02 * var(--ColumnWidth));
+    --grid_item_border_width: calc(var(--sclfactor) * 0.008 * var(--ColumnWidth));
+    --grid_item_width: calc(var(--sclfactor) * 0.5 * (var(--ColumnWidth) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
   }
   .grid_container {
     grid-template-columns: auto;
