--- a/css/research.css
+++ b/css/research.css
@@ -1,9 +1,18 @@
 body {
   --BorderColor: var(--UnselectedBorderColor);
-  --grid_width: 70vw;
   --grid_item_margin: 2.1vw;
   --grid_item_border_width: 0.21vw;
   overflow-x: hidden;
+}
+.intro {
+  width: var(--ColumnWidth);
+  margin-top: var(--TopMarginToHeader);
+  margin-bottom: 5vh;
+  margin-left: calc( (100vw - var(--ColumnWidth)) / 2);
+  background-color: var(--BackgroundColor);
+  color: var(--FontColor);
+  font-size: var(--TextFontSize);
+  text-align: justify;
 }
 .grid_container {
   display: grid;
