--- a/css/apps.css
+++ b/css/apps.css
@@ -1,21 +1,13 @@
 body {
   --FancyColor_selected: rgb(15, 15, 15);
   --BorderColor: var(--UnselectedBorderColor);
-  --grid_item_margin: calc(0.02 * var(--ColumnWidth));
-  --grid_item_border_width: calc(0.007 * var(--ColumnWidth));
-  --grid_item_width: calc(0.5 * (var(--ColumnWidth) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
+  --grid_item_margin: 1.5vw;;
+  --grid_item_border_width: 0.21vw;
   overflow-x: hidden;
 }
 #webapps {
   color: var(--NavBarActiveColor);
   pointer-events: none;
-}
-img {
-  max-width: 100%;
-  max-height: auto;
-}
-h1, p {
-  color: var(--FontColor);
 }
 .grid_link {
   text-decoration: none;
@@ -33,45 +25,47 @@ h1, p {
 }
 .grid_container {
   display: grid;
-  grid-template-columns: auto auto;
-  width: var(--ColumnWidth);
-  margin-right: 0;
-  margin-left: calc((100vw - var(--ColumnWidth)) / 2.1);
-  margin-bottom: 5vh;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 370px));
+  grid-auto-flow: row dense;
+  width: auto;
+  justify-content: center;
+  margin: 5vh;
 }
 .grid_item {
-  width: var(--grid_item_width);
+  width: auto;
   height: auto;
+  padding: calc(0.2 * var(--grid_item_margin));
+  margin: var(--grid_item_margin);
   border: var(--grid_item_border_width) solid var(--BorderColor);
   border-radius: 0px;
-  margin: var(--grid_item_margin);
   cursor: pointer;
 }
 .grid_item:hover{
   border: var(--grid_item_border_width) solid var(--FancyColor);
-  /* cursor: pointer; */
 }
 .grid_item:hover > .button {
   border-color: var(--FancyColor);
 }
 .grid_item_title {
   text-align: center;
-  font-size: calc(0.085 * var(--grid_item_width));
-  max-height: calc(0.15 * var(--grid_item_width));
+  font-size: 1.7em;
+  min-height: 7vh;
+  margin-top: 3%;
+  color: var(--FontColor);
 }
 .thumbnail {
-  width: calc(0.8 * var(--grid_item_width));
-  margin-left: calc(0.1 * var(--grid_item_width));
+  width: 100%;
+  margin-top: 0.4em;
 }
 .button {
-  font-size: calc(0.065 * var(--grid_item_width));
+  font-size: 1.2em;
   text-align: center;
   color: var(--FontColor);
-  margin-top: calc(0.05 * var(--grid_item_width));
-  margin-bottom: calc(0.06 * var(--grid_item_width));
+  margin-top: 3%;
+  margin-bottom: 3%;
   background-color: var(--BackgroundColor);
   border-color: var(--BorderColor);
-  width: calc(0.3 * var(--grid_item_width));
+  width: 30%;
 }
 .button:hover {
   background-color: var(--FancyColor);
@@ -81,20 +75,8 @@ h1, p {
   color: var(--FancyColor_selected);
 }
 .deployButton {
-  margin-left: calc(0.1 * var(--grid_item_width));
+  margin-left: 9%;
 }
 .codeButton {
-  margin-left: calc(0.2 * var(--grid_item_width));
-}
-
-@media only screen and (max-width: 768px) and (orientation: portrait) {
-  body {
-    --sclfactor: 2.4;
-    --grid_item_margin: calc(var(--sclfactor) * 0.02 * var(--ColumnWidth));
-    --grid_item_border_width: calc(var(--sclfactor) * 0.008 * var(--ColumnWidth));
-    --grid_item_width: calc(var(--sclfactor) * 0.5 * (var(--ColumnWidth) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
-  }
-  .grid_container {
-    grid-template-columns: auto;
-  }
+  margin-left: 20%;
 }
