--- a/css/blog.css
+++ b/css/blog.css
@@ -6,24 +6,18 @@ body {
   --grid_item_width: calc(0.5 * (var(--grid_width) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
   overflow-x: hidden;
 }
-
 .grid_container {
   display: grid;
-  /* grid-template-columns: auto auto; */
   grid-template-columns: repeat(auto-fit, minmax(250px, 350px));
   grid-auto-flow: row dense;
-  width: var(--grid_width);
-  margin-right: 0;
-  margin-left: calc((100vw - var(--grid_width)) / 2);
-  margin-bottom: 5vh;
+  width: auto;
+  justify-content: center;
+  margin: 5vh;
   margin-top: 15vh;
-  /* margin: auto; */
 }
 .grid_item {
   width: auto;
   height: auto;
-  /* border: var(--grid_item_border_width) solid var(--BorderColor); */
-  /* border-radius: 25px; */
   padding: calc(0.2 * var(--grid_item_margin));
   margin: var(--grid_item_margin);
   cursor: pointer;
