--- a/css/apps.css
+++ b/css/apps.css
@@ -2,7 +2,7 @@ body {
   --FancyColor_selected: rgb(15, 15, 15);
   --BorderColor: var(--UnselectedBorderColor);
   --grid_item_margin: 1.5vw;;
-  --grid_item_border_width: 0.21vw;
+  --grid_item_border_width: 0.25vw;
   overflow-x: hidden;
 }
 #webapps {
@@ -23,9 +23,9 @@ body {
   font-size: var(--TextFontSize);
   text-align: justify;
 }
-.grid_container {
+#grid_container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 370px));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 360px));
   grid-auto-flow: row dense;
   width: auto;
   justify-content: center;
