--- a/css/blog.css
+++ b/css/blog.css
@@ -34,26 +34,13 @@ body {
   text-align: center;
   font-size: 1.4em;
   margin: 0;
-  margin-bottom: 3%;
   color: var(--FontColor);
 }
 .thumbnail {
   width: 100%;
   margin-top: 0.4em;
 }
-.blogtag {
-  --tagwidth: 5em;
-  display: inline-block;
-  margin-top: 0;
-  width: var(--tagwidth);
-  font-size: 0.9em;
-  border-radius: 10px;
-  color: var(--LightModeFontColor);
-  text-align: center;
-}
-#tag-container {
-  text-align: right;
-}
+/* Blog topic tag classes: must start with capital letter */
 .Coding {
   background-color: rgb(153, 57, 224);
 }
