--- a/css/apps.css
+++ b/css/apps.css
@@ -49,7 +49,7 @@ body {
 .grid_item_title {
   text-align: center;
   font-size: 1.7em;
-  min-height: 7vh;
+  /* min-height: 5vh; */
   margin-top: 3%;
   color: var(--FontColor);
 }
