--- a/css/blog.css
+++ b/css/blog.css
@@ -14,6 +14,7 @@ body {
   justify-content: center;
   margin: 4em;
   margin-top: 2em;
+  margin-bottom: 0em;
 }
 .grid_item {
   width: auto;
@@ -30,7 +31,7 @@ body {
   margin: 0;
 }
 .grid_item_header {
-  text-align: center;
+  text-align: left;
   color: var(--FontColor);
   /* min-height: 7vh; */
   padding-bottom: auto;
@@ -53,12 +54,11 @@ body {
   margin-top: 1em;
 }
 .topic-banner-entry {
-  --tagwidth: 5.2em;
   display: inline-block;
   margin: 0.1em;
-  width: var(--tagwidth);
+  width: 5.5em;
   /* height: 2em; */
-  font-size: 1em;
+  font-size: 1.2em;
   border-radius: 5px;
   color: var(--LightModeFontColor);
   text-align: center;
@@ -95,8 +95,14 @@ body {
   text-align: justify;
   color: var(--FontColor);
 }
-
 #blog {
   color: var(--NavBarActiveColor);
   pointer-events: none;
+}
+
+@media only screen and (max-width: 768px) and (orientation: portrait) {
+  .topic-banner-entry {
+    width: 4em;
+    font-size: 1.1em;
+  }
 }
