--- a/css/blog_page_template.css
+++ b/css/blog_page_template.css
@@ -14,7 +14,7 @@
 }
 
 .blog-entry-header {
-  text-align: center;
+  text-align: left;
   font-size: calc(1.5 * var(--TextFontSize));
   margin-bottom: 1.5em;
 }
