--- a/css/blog.css
+++ b/css/blog.css
@@ -1,9 +1,8 @@
 body {
-  --BorderColor: var(--UnselectedBorderColor);
   --grid_width: 70vw;
-  --grid_item_margin: calc(0.03 * var(--grid_width));
+  --grid_item_margin: calc(0.005 * var(--grid_width));
   --grid_item_border_width: calc(0.003 * var(--grid_width));
-  --grid_item_width: calc(0.5 * (var(--grid_width) - 4 * (var(--grid_item_border_width) + var(--grid_item_margin))));
+  --ThumbnailMargin: 10%;
   overflow-x: hidden;
 }
 #grid_container {
@@ -12,14 +11,13 @@ body {
   grid-auto-flow: row dense;
   width: auto;
   justify-content: center;
-  margin: 4em;
+  margin: 3vw;
   margin-top: 2em;
   margin-bottom: 0em;
 }
 .grid_item {
   width: auto;
   height: auto;
-  padding: calc(0.2 * var(--grid_item_margin));
   margin: var(--grid_item_margin);
   cursor: pointer;
 }
@@ -29,6 +27,10 @@ body {
 }
 .grid_item_content {
   margin: 0;
+  text-align: center;
+  background-color: var(--GridItemColor);
+  border-radius: 25px;
+  padding: 1.2em;
 }
 .grid_item_header {
   text-align: left;
@@ -46,7 +48,7 @@ body {
   margin-top: 0.5em;
 }
 .thumbnail {
-  width: 100%;
+  width: calc(100% - var(--ThumbnailMargin));
   margin-top: 0.4em;
 }
 #topic-tag-banner {
@@ -104,5 +106,8 @@ body {
   .topic-banner-entry {
     width: 4em;
     font-size: 1.1em;
+  }
+  .grid_item {
+    margin-bottom: 2em;
   }
 }
