track pdf documents!

--- a/css/blog.css
+++ b/css/blog.css
@@ -89,9 +89,8 @@ body {
 .Geology {
   background-color: rgb(182, 77, 18);
 }
-.Miscellaneous {
+.General {
   background-color: rgb(198, 60, 60);
-  width: 7em;
 
 }
 .grid_link {
