--- a/css/master.css
+++ b/css/master.css
@@ -7,7 +7,7 @@
   --DarkModeGridItemColor: rgb(51, 51, 51);
 
   /* Light mode color palette */
-  --LightModeBackgroundColor: rgb(157, 157, 157);
+  --LightModeBackgroundColor: rgb(184, 184, 184);
   --LightModeFontColor: rgb(41, 41, 41);
   --LightModeFancyColor: rgb(13, 79, 185);
   --LightModeEmphFontColor: rgb(74, 74, 74);
@@ -57,7 +57,7 @@ a {
 }
 #settings-container {
   position: absolute;
-  top: 0;
+  top: 1.3em;
   left: 80vw;
   width: 15vw;
 }
@@ -137,6 +137,7 @@ a {
 }
 #navbar {
   text-align: center;
+  background-color: inherit;
 }
 .navbar-item {
   color: var(--FontColor);
@@ -147,6 +148,7 @@ a {
   padding-bottom: 1vh;
   display: inline-block;
   cursor: pointer;
+  background-color: inherit;
 }
 .navbar-item:hover {
   color: var(--TextHoverColor);
@@ -222,7 +224,8 @@ a {
     padding-top: 3vh;
     display: none;
     text-align: left;
-    background-color: var(--BackgroundColor);
+    background-color: inherit;
+    background-color: var(--GridItemColor);
   }
   .navbar-item {
     display: inherit;
@@ -237,7 +240,7 @@ a {
     display: block;
     margin-left: 5vh;
     cursor: pointer;
-    background-color: var(--BackgroundColor);
+    background-color: inherit;
   }
   #menu:checked ~ #navbar {
     display: block;
@@ -260,7 +263,7 @@ a {
     background-color: var(--FontColor);
   }
   #settings-container {
-    top: 1vh;
+    top: 0.6em;
     left: 65vw;
     width: 35vw;
   }
