--- a/css/blog.css
+++ b/css/blog.css
@@ -80,6 +80,9 @@ body {
 .Biology {
   background-color: rgb(2, 212, 26);
 }
+.Chemistry {
+  background-color: rgb(207, 49, 179);
+}
 .Math {
   background-color: rgb(236, 180, 11);
 }
