--- a/css/blog_page_template.css
+++ b/css/blog_page_template.css
@@ -30,16 +30,10 @@
   margin-top: 0.6em;
 }
 
-#content-wrap {
-  padding-bottom: 80vh;
-}
-
 #blog-navigator {
-  position: absolute;
-  bottom: 50vh;
+  margin-top: 10vh;
   text-align: center;
   width: 100%;
-  height: 20vh;
 }
 
 .blog-navigator-button {
@@ -58,11 +52,9 @@
 }
 
 #suggested-readings {
-  position: absolute;
-  bottom: 10vh;
   text-align: center;
   width: 100%;
-  height: 40vh;
+  margin-top: 5vh;
   color: var(--FontColor);
 }
 
@@ -79,13 +71,6 @@
 
 .grid_item {
   margin: 1em;
-}
-
-#footer {
-  position:absolute;
-  bottom: 0;
-  width: 100%;
-  height: 10vh;
 }
 
 @media only screen and (max-width: 768px) {
