add config file

--- a/css/blog_page_template.css
+++ b/css/blog_page_template.css
@@ -3,6 +3,10 @@
   pointer-events: all;
 }
 
+h1 {
+  text-align: left;
+}
+
 .blog-wrap {
   width: var(--ColumnWidth);
   margin-top: var(--TopMarginToHeader);
