--- a/css/blog_page_template.css
+++ b/css/blog_page_template.css
@@ -7,6 +7,17 @@ h1 {
   text-align: left;
 }
 
+pre, code {
+  /* text-align: left; */
+  /* white-space: pre; */
+  /* width: 80vw;                          /* specify width  */ */
+  white-space: pre-wrap;                 /* CSS3 browsers  */
+  white-space: -moz-pre-wrap !important; /* 1999+ Mozilla  */
+  white-space: -pre-wrap;                /* Opera 4 thru 6 */
+  white-space: -o-pre-wrap;              /* Opera 7 and up */
+  word-wrap: break-word;
+}
+
 .blog-wrap {
   width: var(--ColumnWidth);
   margin-top: var(--TopMarginToHeader);
