--- a/css/blog_page_template.css
+++ b/css/blog_page_template.css
@@ -8,9 +8,9 @@ h1 {
 }
 
 pre, code {
-  /* text-align: left; */
+  text-align: left;
   /* white-space: pre; */
-  /* width: 80vw;                          /* specify width  */ */
+  /* width: 250px;                          /* specify width */
   white-space: pre-wrap;                 /* CSS3 browsers  */
   white-space: -moz-pre-wrap !important; /* 1999+ Mozilla  */
   white-space: -pre-wrap;                /* Opera 4 thru 6 */
