--- a/css/blog_entry.css
+++ b/css/blog_entry.css
@@ -1,24 +1,19 @@
+body {
+  --BlogHeaderColor: var(--EmphFontColor);
+}
+
 #blog {
   color: var(--NavBarActiveColor);
   pointer-events: all;
 }
 
-h1 {
-  text-align: left;
-}
-
 pre, code {
   text-align: left;
-  /* white-space: pre; */
-  /* width: 250px;                          /* specify width */
-  white-space: pre-wrap;                 /* CSS3 browsers  */
-  white-space: -moz-pre-wrap !important; /* 1999+ Mozilla  */
-  white-space: -pre-wrap;                /* Opera 4 thru 6 */
-  white-space: -o-pre-wrap;              /* Opera 7 and up */
-  word-wrap: break-word;
+  white-space: pre;
+  border-radius: 20px;
 }
 
-.blog-wrap {
+#blog-wrap {
   width: var(--ColumnWidth);
   margin-top: var(--TopMarginToHeader);
   margin-left: calc( (100vw - var(--ColumnWidth)) / 2);
@@ -28,25 +23,44 @@ pre, code {
   text-align: justify;
 }
 
-.blog-entry-header {
+h1, h2 {
+  text-align: left;
+  color: var(--BlogHeaderColor);
+}
+
+#return-to-start-arrow {
+  /* display: none; */
+  font-size: 3em;
+  color: var(--UnselectedBorderColor);
+  position: fixed;
+  top: 90vh;
+  left: 80vw;
+  cursor: pointer;
+}
+#return-to-start-arrow:hover {
+  color: var(--FancyColor);
+}
+
+#blog-entry-header {
   text-align: left;
   font-size: calc(1.5 * var(--TextFontSize));
   margin-bottom: 1.5em;
+  color: var(--BlogHeaderColor);
 }
 
-.entry-title {
+#entry-title {
   font-size: calc(1 * var(--TextFontSize));
   margin-top: 0.5em;
   margin-bottom: 0;
 }
 
-.entry-date {
+#entry-date {
   font-size: calc(0.5 * var(--TextFontSize));
   margin-top: 0.6em;
 }
 
 #blog-navigator {
-  margin-top: 10vh;
+  margin-top: 15vh;
   text-align: center;
   width: 100%;
 }
@@ -67,14 +81,18 @@ pre, code {
 }
 
 #suggested-readings {
-  text-align: center;
+  text-align: left;
   width: 100%;
-  margin-top: 5vh;
+  margin-top: 10vh;
   color: var(--FontColor);
   display: none;
 }
 
-#suggested_readings_grid {
+#suggested-readings-title {
+  margin-left: calc( (100vw - var(--ColumnWidth)) / 2);
+}
+
+#suggested-readings-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 350px));
   grid-auto-flow: row dense;
