--- a/css/blog.css
+++ b/css/blog.css
@@ -77,6 +77,9 @@ body {
 .Coding {
   background-color: rgb(154, 112, 195);
 }
+.Python {
+  background-color: rgb(180, 208, 67);
+}
 .Biology {
   background-color: rgb(2, 212, 26);
 }
