--- a/css/home.css
+++ b/css/home.css
@@ -10,7 +10,7 @@
   text-align: center;
 }
 .myname {
-  margin-top: 25vh;
+  margin-top: 22vh;
 }
 .name-wrapper {
   display: inline-block;
@@ -24,9 +24,15 @@
   transition: color 0.5s, font-size 0.5s, transform 0.5s;
   transition-delay: 0.05s;
 }
-.myrol {
+#myrol-container {
+  display: inline-block;
   font-size: 3vw;
   margin-top: 0vh;
+}
+.rol-keyword {
+  display: inline-block;
+  /* cursor: pointer; */
+  /* transition: opacity 0.5s; */
 }
 
 @media only screen and (min-width: 768px) {
